# ecg-xai

./: .gitignore  README.md  pyproject.toml
data/: df_eval_all.csv  df_eval_stability.csv  ecg_durations.npy  ecg_filenames.npy  ecg_model_pred_data.csv  ecg_model_probs.npy  ecg_xai_sel_meta_p0.85_k5.csv  ecg_y_pred_0.50.npy  ecg_y_true.npy  xai_metric_summary_per_class.csv
model/: cnn_1d_final.h5  cnn_1d_final_weights.h5  resnet_final_weights.h5
notebook/: ecg-xai-kaggle.ipynb  ecg-xai-local.ipynb  ecg-xai-plots.ipynb  ecg-xai-theory-test.ipynb  ecg-xai.ipynb  ecg_xai_sel_meta_p0.85_k5.csv  ecg_y_true.npy  xai_metric_summary_per_class.csv
outputs/: ecg_xai_sel_meta_p0.85_k5.csv  ecg_y_pred_0.50.npy
outputs/demo/: all_fused_payloads.joblib  df_eval_attauc_deletion.csv  df_eval_stability.csv  df_lime_all.parquet  df_lime_all.pkl  df_ts_all.parquet  df_ts_all.pkl  meta.json  sel_df.parquet
outputs/eval/: all_fused_payloads.joblib  df_eval_attauc_deletion.csv  df_eval_stability.csv  df_fused_all.json  df_lime_all.csv  df_lime_all.parquet  df_ts_all.csv  df_ts_all.parquet  meta.json  sel_df.parquet
outputs/eval/explain_ablations/: df_eval_fused_priorsOFF.csv  df_eval_fused_priorsON.csv  df_eval_lime_priorsOFF.csv  df_eval_timeshap_priorsOFF.csv  table_Y_ablation_summary.csv
outputs/extra_beat_aug/A0003/: A0003_extra_end.mat  A0003_extra_mid.mat  A0003_extra_seed2080391318_beat4.mat  A0003_extra_seed2374036356_beat12.hea  A0003_extra_seed2374036356_beat12.mat
outputs/extra_beat_aug/A0026/: A0026_extra_end.mat  A0026_extra_mid.mat  A0026_extra_seed4180176621_beat8.mat
outputs/extra_beat_aug/A0374/: A0374_extra_mid.mat  A0374_extra_seed3805132451_beat14.mat
outputs/extra_beat_aug/A0584/: A0584_extra_end.mat  A0584_extra_mid.mat  (+1 more)
src/: __init__.py  config.py  config_targets.py  ecg_lime.py  ecg_timeshap.py  eval.py  explainer.py  fusion.py  payload.py  plot.py  preprocessing.py  segments.py  selection.py  stability_eval.py  utils.py
src/ecgxai/: __init__.py  config.py  config_targets.py  ecg_lime.py  ecg_predict.py  ecg_timeshap.py  eval.py  explainer.py  fusion.py  payload.py  plot.py  preprocessing.py  segments.py  selection.py  stability_eval.py  utils.py
(+306 files in other folders)
