[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-xai"
version = "0.1.0"
description = "ECG explainability toolbox (LIME, TimeSHAP, fused plots, evaluation)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Raju Vaneshwar Nareshwar" }]

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "tqdm",
  "keras",
  "joblib",
  "tensorflow",
  "ecg-plot",
  "pyarrow>=12",
  "pytest", 
  "ruff", 
  "mypy",
  "plotly",
  "nbformat>=4.2.0",
  "statsmodels",
  "kaleido"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
