[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-xai"
version = "0.1.0"
description = "ECG explainability toolbox (LIME, TimeSHAP, fused plots, evaluation)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Raju Vaneshwar Nareshwar" }]
license = { text = "MIT" }

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "tqdm",
  "joblib",
  "tensorflow",
  "keras",
  "ecg-plot",
  "pyarrow>=12",
  "plotly",
  "nbformat>=4.2.0",
  "statsmodels",
  "kaleido"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ecgxai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
